# ChineseRemainderTheorem

./: CMakeLists.txt  main.cpp
Solver/: CMakeLists.txt  chineseremaindertheoremsolver.cpp  chineseremaindertheoremsolver.h
